* Fixed minor wrapping fault while Reset Filter was shown

--- a/incogito-web/src/main/webapp/css/calendar.css
+++ b/incogito-web/src/main/webapp/css/calendar.css
@@ -338,7 +338,7 @@ td#login-submit * {
     width:7em;
     font-size: 0.75em;
     float:right;
-    padding-top:7em;
+    padding-top:6.7em;
     margin-right: 1em;
     text-align:center;
 }
